Fix background blurring on webkit

--- a/css/projects.css
+++ b/css/projects.css
@@ -106,6 +106,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     overflow: auto;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     z-index: 1;
     animation-name: popup-open;
     animation-duration: 0.5s;
